Fixed description wrapping

--- a/Frontend/www/assets/less/pizza/pizza-card.less
+++ b/Frontend/www/assets/less/pizza/pizza-card.less
@@ -58,6 +58,7 @@ label {
     .description {
       margin-bottom: 0;
       font-size: 1.25rem;
+      overflow-wrap: break-word;
     }
   }
 
